--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,7 +67,7 @@ p {
   color: #fff;
 }
 .sidebar-wrapper .profile-container {
-  padding: 30px;
+  padding: 20px !important;
   background: rgba(0, 0, 0, 0.2);
   text-align: center;
   color: #fff;
@@ -103,7 +103,7 @@ p {
   font-size: 14px;
 }
 .sidebar-wrapper .container-block {
-  padding: 30px;
+  padding: 20px 10px 20px 20px;
 }
 .sidebar-wrapper .container-block-title {
   text-transform: uppercase;
