--- a/assets/css/styles-dark.css
+++ b/assets/css/styles-dark.css
@@ -45,6 +45,11 @@ a:focus {
 p {
   line-height: 1.5;
 }
+
+.mb-30 {/home/sb/www/webikeo/client
+  margin-bottom: 30px;
+}
+
 .wrapper {
   background: #42A8C0;
   max-width: 960px;
@@ -249,7 +254,7 @@ p {
   background: #5ba2b3;
 }
 .footer {
-  padding: 30px;
+  padding: 30px 30px 0 30px;
 }
 .footer .copyright {
   line-height: 1.6;
