--- a/assets/css/styles-dark.css
+++ b/assets/css/styles-dark.css
@@ -199,6 +199,38 @@ p {
 .main-wrapper .section {
   margin-bottom: 60px;
 }
+.main-wrapper .tag-section .item {
+  margin-bottom: 20px;
+}
+.main-wrapper .tag-section .label {
+  margin-bottom: 5px;
+}
+.main-wrapper .tag-section .label.label-pill {
+  display: inline-block;
+  min-width: 10px;
+  padding: 3px 7px;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  border-radius: 10px;
+}
+.main-wrapper .tag-section .label .badge {
+  padding: 3px;
+  margin-left: 5px;
+  background-color: #000000;
+}
+.main-wrapper .tag-section .item .legend {
+  color: #ddd9d2;
+  font-size: 16px;
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-weight: 500;
+}
+
 .main-wrapper .experiences-section .item {
   margin-bottom: 30px;
 }
@@ -211,7 +243,7 @@ p {
   color: #ddd9d2;
   font-size: 16px;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 10px;
   font-weight: 500;
 }
 .main-wrapper .time {
@@ -223,6 +255,9 @@ p {
 .main-wrapper .company {
   margin-bottom: 10px;
   color: #97AAC3;
+}
+.main-wrapper .company i.fa {
+  margin: 0 5px;
 }
 .main-wrapper .project-title {
   font-size: 16px;
