--- a/assets/css/styles-dark.css
+++ b/assets/css/styles-dark.css
@@ -251,6 +251,8 @@ p {
   right: 0;
   top: 0;
   color: #97AAC3;
+  font-size: 1.2em;
+  font-weight: bold;
 }
 .main-wrapper .company {
   margin-bottom: 10px;
@@ -311,7 +313,7 @@ p {
   .main-wrapper .time {
     position: static;
     display: block;
-    margin-top: 5px;
+    margin: 5px 0;
   }
   .main-wrapper .upper-row {
     margin-bottom: 0;
