--- a/assets/css/styles-dark.css
+++ b/assets/css/styles-dark.css
@@ -71,6 +71,9 @@ p {
 .sidebar-wrapper a {
   color: #fff;
 }
+.sidebar-wrapper .container-block {
+  padding: 20px 10px 20px 20px;
+}
 .sidebar-wrapper .profile-container {
   padding: 20px !important;
   background: rgba(0, 0, 0, 0.2);
@@ -105,10 +108,10 @@ p {
   margin-bottom: 0;
 }
 .sidebar-wrapper .contact-list .email .fa {
-  font-size: 14px;
+  font-size: 15px;
 }
-.sidebar-wrapper .container-block {
-  padding: 20px 10px 20px 20px;
+.sidebar-wrapper .contact-list .resume .fa {
+  font-size: 17px;
 }
 .sidebar-wrapper .container-block-title {
   text-transform: uppercase;
