--- a/assets/css/styles-dark.css
+++ b/assets/css/styles-dark.css
@@ -113,6 +113,16 @@ p {
 .sidebar-wrapper .contact-list .resume .fa {
   font-size: 17px;
 }
+.sidebar-wrapper .contact-list .resume .qrcode-link {
+  display: block;
+  width: 150px;
+  height: 150px;
+  margin: 10px auto 0;
+}
+.sidebar-wrapper .contact-list .resume .qrcode {
+  width: 150px;
+  height: 150px;
+}
 .sidebar-wrapper .container-block-title {
   text-transform: uppercase;
   font-size: 16px;
